{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 17,
  "lineage": "f67ff330-fe6c-cc49-d7ca-d1f72c49e868",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "acme_elb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "acme_web",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "acme_root",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0184f54d0cbba241c",
            "owner_id": "333567660568",
            "tags": {
              "Name": "acme_root"
            },
            "vpc_id": "vpc-0fbfb4b9e55fb88f4"
          },
          "depends_on": [
            "aws_vpc.acme_root_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "acme_root",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0184f54d0cbba241c",
            "id": "r-rtb-05896cf7140e1228a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05896cf7140e1228a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.acme_root",
            "aws_vpc.acme_root_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acme_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:333567660568:security-group/sg-07ea4816e0270bf2c",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ea4816e0270bf2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acme_elb",
            "name_prefix": null,
            "owner_id": "333567660568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme_elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbfb4b9e55fb88f4"
          },
          "depends_on": [
            "aws_vpc.acme_root_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acme_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:333567660568:security-group/sg-0e38f7ae78311f806",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e38f7ae78311f806",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acme_web",
            "name_prefix": null,
            "owner_id": "333567660568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbfb4b9e55fb88f4"
          },
          "depends_on": [
            "aws_vpc.acme_root_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:333567660568:subnet/subnet-0edc40a0f974d1d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0edc40a0f974d1d0a",
            "map_public_ip_on_launch": true,
            "owner_id": "333567660568",
            "tags": {
              "Name": "acme_web"
            },
            "vpc_id": "vpc-0fbfb4b9e55fb88f4"
          },
          "depends_on": [
            "aws_vpc.acme_root_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "acme_root_demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:333567660568:vpc/vpc-0fbfb4b9e55fb88f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06087cbf56d1ef971",
            "default_route_table_id": "rtb-05896cf7140e1228a",
            "default_security_group_id": "sg-038653c29451ad07d",
            "dhcp_options_id": "dopt-19abac7e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fbfb4b9e55fb88f4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05896cf7140e1228a",
            "owner_id": "333567660568",
            "tags": {
              "Name": "acme_root_demo"
            }
          }
        }
      ]
    }
  ]
}